Fixed overflow property in css.

--- a/public/css/cities.css
+++ b/public/css/cities.css
@@ -132,7 +132,7 @@ input {
 
 .locationContainer {
     height: 700px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .localImg {
